# yarrharr

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
Formula/: yarrharr.rb
config/: config.json
deb/: KEY.gpg  yarrharr.list
include/: config.hpp  download_utils.hpp  downloader.hpp  games.hpp  tmdb.hpp  utils.hpp  version.hpp
scripts/: release.sh
src/: config.cpp  download_utils.cpp  downloader.cpp  games.cpp  main.cpp  tmdb.cpp  utils.cpp  version.cpp
